@@ -1143,6 +1143,7 @@ CONFIG_RT_3052_ESW=y
 CONFIG_RAETH_DHCP_TOUCH=y
 # CONFIG_RAETH_READ_MAC_FROM_MTD is not set
 # CONFIG_RAETH_MEMORY_OPTIMIZATION is not set
+CONFIG_RAETH_ACCEPT_OVERSIZED=y
 
 #
 # Platform config for  Ralink RT3xx/RT28xx/RT5xx.
