@@ -710,6 +710,7 @@
 15) Add Cisco Discovery deamon support (cdpEnabled variable. Need add in WebUI).<br>
 16) Fix configure security mode for MBSSID.<br>
 17) Update udpxy to PATCH120.<br>
+18) Workaround for accept frames > 1514 bytes.<br>
 
 <br><br>
 <b>For support see:</b><br>
